RESOLVED FIXED294917
[Baseline Alignment] Fix css-flexbox/align-items-baseline-column-horz
https://bugs.webkit.org/show_bug.cgi?id=294917
Summary [Baseline Alignment] Fix css-flexbox/align-items-baseline-column-horz
Sammy Gill
Reported 2025-06-24 11:21:39 PDT
From some debugging it looks like one of the items is not getting placed into the correct baseline sharing group
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-24 11:22:03 PDT
Sammy Gill
Comment 2 2025-06-24 11:25:03 PDT
EWS
Comment 3 2025-06-24 20:53:11 PDT
Committed 296601@main (72c3b9e4364a): <https://commits.webkit.org/296601@main> Reviewed commits have been landed. Closing PR #47126 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.